--- a/src/components/BookCard/Bookcard.css
+++ b/src/components/BookCard/Bookcard.css
@@ -161,3 +161,28 @@
     border: none;
     
 }
+
+
+/* Активная категория */
+.category-link.active {
+    font-weight: 700 !important;
+    font-size: 16px;
+    color: #1C2A39;
+
+
+}
+
+/* Для мобильных устройств */
+@media (max-width: 768px) {
+    .bookshop_market__nav {
+        overflow-x: auto;
+        flex-wrap: nowrap;
+        padding-bottom: 5px;
+    }
+    
+    .category-link {
+        flex-shrink: 0;
+        padding: 6px 12px;
+        font-size: 13px;
+    }
+}
